operational ✔️ still todo: cli, icon, docs of the doc-generator

--- a/resources/styles.less
+++ b/resources/styles.less
@@ -122,7 +122,8 @@ aside {
     h1 {
       font: 1.8em 'Source Code Pro', monospace;
       margin: 0 0 1em 1.5rem;
-      padding: 1em 1em 2.5px 0;
+      padding: 1em 8px 2.5px 0;
+      letter-spacing: -2px;
       border-bottom: 5px solid var(--primary);
       color: var(--absolute);
     }
@@ -132,7 +133,7 @@ aside {
         width: 2.5em;
         height: 2.5em;
         margin: auto 0.5em;
-        filter: drop-shadow(0 0 0.75em var(--glow));
+        // filter: drop-shadow(0 0 0.75em var(--glow));
       }
     }
   }
@@ -145,6 +146,15 @@ aside {
     padding-inline-start: 0;
     margin: 0;
     li {
+      p {
+        font-weight: bold;
+        letter-spacing: -0.5px;
+        margin-bottom: 0;
+        padding: 2px 1.3em;
+        font-size: 1.1em;
+        color: var(--hljs-comment);
+        // text-transform: uppercase;
+      }
       a {
         color: var(--text);
         padding-bottom: 0.1em 5em;
