stop execution of command if help is requested

--- a/resources/styles.less
+++ b/resources/styles.less
@@ -237,14 +237,13 @@ aside {
       pointer-events: none;
       .prev {
         float: left;
-        pointer-events: all;
       }
       .next {
         float: right;
-        pointer-events: all;
       }
       .prev,
       .next {
+        pointer-events: all;
         border-radius: 50%;
         width: 2em;
         height: 2em;
@@ -252,7 +251,7 @@ aside {
         line-height: 2em;
         text-align: center;
         font-size: 1.5em;
-        font-family: monospace;
+        font-family: Consolas, monospace;
         font-weight: bold;
         color: var(--text);
         background-color: var(--button);
