--- a/resources/styles.less
+++ b/resources/styles.less
@@ -54,6 +54,7 @@
     --bg: #0e0f0f;
     --box: #050505;
     --code: #000;
+    --button: #2d2d2d;
 
     --border: #2d2e2f;
     --shadow: #070707;
@@ -80,6 +81,7 @@
   box-sizing: border-box;
   word-break: break-word;
   text-decoration: none;
+  text-size-adjust: 100%;
 }
 html,
 body {
@@ -115,6 +117,10 @@ aside {
   flex-direction: column;
   background-color: var(--box);
   overflow-x: auto;
+
+  .block {
+    display: block;
+  }
 
   .title {
     display: flex;
@@ -209,7 +215,8 @@ aside {
   .documentative {
     height: 100%;
     overflow-y: auto;
-    padding: 0 1.5em 3em 1.5em;
+    padding: 0 1.5em;
+    padding-bottom: 4em;
     display: flex;
     flex-direction: column;
     .block {
@@ -237,23 +244,27 @@ aside {
       pointer-events: none;
       .prev {
         float: left;
+        padding-right: 0.13em;
       }
       .next {
         float: right;
+        padding-left: 0.13em;
       }
       .prev,
       .next {
+        opacity: 1;
+        transition: opacity 200ms ease;
         pointer-events: all;
         border-radius: 50%;
-        width: 2em;
-        height: 2em;
+        width: 1.75em;
+        height: 1.75em;
         margin: 0 1em;
-        line-height: 2em;
+        padding-top: 0.07em;
+        font: 1.5em 'Source Code Pro', monospace;
+        line-height: 1.75em;
         text-align: center;
-        font-size: 1.5em;
-        font-family: Consolas, monospace;
-        font-weight: bold;
         color: var(--text);
+        text-shadow: none !important;
         background-color: var(--button);
       }
     }
@@ -361,7 +372,7 @@ aside {
     // box-shadow: none;
     left: calc(4.5em - 100%);
     width: calc(100% - 4.5em);
-    transition: left 500ms ease; // box-shadow 200ms ease;
+    transition: left 300ms ease; // box-shadow 200ms ease;
   }
   .wrapper {
     display: flex;
@@ -369,7 +380,7 @@ aside {
     position: fixed;
     top: 0;
     left: 0;
-    transition: left 500ms ease;
+    transition: left 300ms ease;
     .documentative {
       flex-shrink: 1;
       nav {
@@ -383,6 +394,7 @@ aside {
       padding: 0.8em 0;
       background-color: var(--box);
       h1 {
+        letter-spacing: -2px;
         font-size: 1.8em;
         padding-top: 1.5px;
         margin: auto 1.5rem auto 0;
@@ -414,7 +426,12 @@ aside {
       // box-shadow: 1.5em 0 10em var(--border);
     }
     .wrapper {
-      left: calc(100% - 4.5em);
+      left: calc(100% - 4.75em);
+      .prev,
+      .next {
+        opacity: 0 !important;
+        pointer-events: none !important;
+      }
     }
   }
 }
