--- a/resources/styles.less
+++ b/resources/styles.less
@@ -1,7 +1,7 @@
 /*
  * Documentative Styling
  * (c) 2020 dragonwocky <thedragonring.bod@gmail.com>
- * (https://dragonwocky.me/) under the MIT License
+ * (https://dragonwocky.me/) under the MIT license
  */
 
 :root {
@@ -11,12 +11,12 @@
 
   --text: rgba(0, 0, 0, 0.84);
   --link: var(--primary);
-  --grey: var(--hover);
+  --grey: #dedede;
 
   --bg: #fbfcfc;
   --box: #f2f3f4;
   --code: #f7f9f9;
-  --button: var(--shadow);
+  --button: #eee;
 
   --border: #e5e7e9;
   --shadow: #eee;
@@ -31,7 +31,7 @@
   --hljs-obj: #2c426b;
   --hljs-string: #d14;
   --hljs-builtin: #0086b3;
-  --hljs-keyword: var(--colour);
+  --hljs-keyword: rgba(0, 0, 0, 0.84);
   --hljs-selector: #900;
   --hljs-type: #458;
   --hljs-regex: #009926;
@@ -51,6 +51,7 @@
 
     --text: #ddd;
     --link: lighten(__primary__, 22.5%);
+    --grey: #36393f;
 
     --bg: #0e0f0f;
     --box: #050505;
@@ -120,10 +121,6 @@ aside {
   background-color: var(--box);
   overflow-x: auto;
 
-  .block {
-    display: block;
-  }
-
   .title {
     display: flex;
     flex-direction: row;
@@ -178,22 +175,22 @@ aside {
           text-shadow: 0 0 0.75em var(--glow);
         }
       }
-      &.depth-1 a {
-        padding-left: 1.875em;
+      &.depth-1 > a {
+        text-decoration: underline var(--border);
       }
-      &.depth-2 a {
+      &.depth-2 > a {
         padding-left: calc(1.5em + calc(0.75em * 1));
       }
-      &.depth-3 a {
+      &.depth-3 > a {
         padding-left: calc(1.5em + calc(0.75em * 2));
       }
-      &.depth-4 a {
+      &.depth-4 > a {
         padding-left: calc(1.5em + calc(0.75em * 3));
       }
-      &.depth-5 a {
+      &.depth-5 > a {
         padding-left: calc(1.5em + calc(0.75em * 4));
       }
-      &.depth-6 a {
+      &.depth-6 > a {
         padding-left: calc(1.5em + calc(0.75em * 5));
       }
     }
@@ -233,7 +230,9 @@ aside {
       padding: 1em;
       background-color: var(--box);
       box-shadow: 0.4em 0.4em 1em var(--shadow);
-      p:first-child,
+      p:first-child {
+        margin-top: 0;
+      }
       p:last-child {
         margin-bottom: 0;
       }
@@ -261,7 +260,6 @@ aside {
         width: 1.75em;
         height: 1.75em;
         margin: 0 1em;
-        padding-top: 0.07em;
         font: 1.5em 'Source Code Pro', monospace;
         line-height: 1.75em;
         text-align: center;
