separate styles for page title and h1

--- a/resources/styles.less
+++ b/resources/styles.less
@@ -175,8 +175,11 @@ aside {
           text-shadow: 0 0 0.75em var(--glow);
         }
       }
-      &.depth-1 > a {
+      &.entry > a {
         text-decoration: underline var(--border);
+      }
+      &.depth-1 > a {
+        padding-left: 1.75em;
       }
       &.depth-2 > a {
         padding-left: calc(1.5em + calc(0.75em * 1));
