--- a/resources/styles.less
+++ b/resources/styles.less
@@ -178,22 +178,22 @@ aside {
       &.entry > a {
         text-decoration: underline var(--border);
       }
-      &.depth-1 > a {
+      &.level-1 > a {
         padding-left: 1.75em;
       }
-      &.depth-2 > a {
+      &.level-2 > a {
         padding-left: calc(1.5em + calc(0.75em * 1));
       }
-      &.depth-3 > a {
+      &.level-3 > a {
         padding-left: calc(1.5em + calc(0.75em * 2));
       }
-      &.depth-4 > a {
+      &.level-4 > a {
         padding-left: calc(1.5em + calc(0.75em * 3));
       }
-      &.depth-5 > a {
+      &.level-5 > a {
         padding-left: calc(1.5em + calc(0.75em * 4));
       }
-      &.depth-6 > a {
+      &.level-6 > a {
         padding-left: calc(1.5em + calc(0.75em * 5));
       }
     }
