--- a/resources/docs.less
+++ b/resources/docs.less
@@ -51,7 +51,7 @@
 
     --text: #ddd;
     --link: lighten(__primary__, 22.5%);
-    --grey: #36393f;
+    --grey: #52555c;
 
     --bg: #0e0f0f;
     --box: #050505;
@@ -270,7 +270,7 @@ aside {
         background-color: var(--button);
       }
     }
-    .copyright {
+    .footer {
       text-align: right;
       color: var(--grey);
       margin: auto 1.5em 0;
@@ -279,7 +279,9 @@ aside {
       }
       a {
         color: var(--grey);
+        font-weight: bold;
         text-shadow: none;
+        text-decoration: dotted underline;
       }
     }
     h1,
