--- a/resources/docs.less
+++ b/resources/docs.less
@@ -11,7 +11,7 @@
 
   --text: rgba(0, 0, 0, 0.84);
   --link: var(--primary);
-  --grey: #dedede;
+  --grey: #6f6f6f;
 
   --bg: #fbfcfc;
   --box: #f2f3f4;
@@ -201,7 +201,7 @@ aside {
   .mark {
     text-align: right;
     margin-top: auto;
-    padding: 2px 1.5em;
+    padding: 1.5em 1.5em 2px 1.5em;
     font-size: 0.8em;
     a {
       color: var(--grey);
