styling: make inline code fit in better

--- a/resources/docs.less
+++ b/resources/docs.less
@@ -330,25 +330,24 @@ aside {
       border: 1px solid var(--border);
     }
     code {
-      padding: 0.5em;
+      font-size: 0.8em;
       background-color: var(--code);
-      border-radius: 5px;
       overflow-x: auto;
       position: relative;
       display: block;
       font-family: 'Source Code Pro', monospace;
     }
     *:not(pre) > code {
-      line-height: 2.5em;
-      font-size: 0.75em;
+      padding: 0.275em 0.35em;
+      border-radius: 2px;
       display: inline;
     }
     pre {
       position: relative;
       code {
         padding: 1.8em;
+        border-radius: 5px;
         position: static;
-        font-size: 0.8em;
         &::before {
           position: absolute;
           right: 0;
