adds sorta-lazy-loading... code is eh but works

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -289,6 +289,9 @@ aside .mark a {
   color: var(--link);
   text-shadow: 0 0 0.75em var(--glow);
 }
+.wrapper .documentative img {
+  max-width: 100%;
+}
 .wrapper .documentative blockquote {
   margin-left: 0;
   padding-left: 1em;
