--- a/resources/docs.less
+++ b/resources/docs.less
@@ -306,6 +306,9 @@ aside {
       color: var(--link);
       text-shadow: 0 0 0.75em var(--glow);
     }
+    img {
+      max-width: 100%;
+    }
     blockquote {
       margin-left: 0;
       padding-left: 1em;
